crates/walrus-semantics/snapshots/infer/loop_unit.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: App {
            ctor: Never,
            params: [],
        },
        1: App {
            ctor: Never,
            params: [],
        },
        2: App {
            ctor: Tuple,
            params: [],
        },
        3: App {
            ctor: Tuple,
            params: [],
        },
    },
    type_of_type: {
        0: App {
            ctor: Tuple,
            params: [],
        },
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App {
                ctor: Tuple,
                params: [],
            },
        },
    },
    diagnostics: [],
}
