crates/walrus-semantics/snapshots/infer/return_unit.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: App {
            ctor: Never,
            params: [],
        },
        1: App {
            ctor: Never,
            params: [],
        },
    },
    type_of_type: {
        0: App {
            ctor: Tuple,
            params: [],
        },
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App {
                ctor: Tuple,
                params: [],
            },
        },
    },
    diagnostics: [],
}
