crates/walrus-semantics/snapshots/infer/struct_constructor.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_var: {
        2: Primitive(
            Int,
        ),
        4: Primitive(
            Bool,
        ),
        7: Primitive(
            Int,
        ),
        8: Primitive(
            Bool,
        ),
    },
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Bool,
        ),
        2: Struct(
            0,
        ),
        3: Struct(
            0,
        ),
    },
    type_of_type: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Bool,
        ),
        2: Struct(
            0,
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Struct(
                0,
            ),
        },
    },
    diagnostics: [],
}
