crates/walrus-semantics/snapshots/infer/struct_destructure.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: App {
            ctor: Int,
            params: [],
        },
        1: App {
            ctor: Bool,
            params: [],
        },
        2: App {
            ctor: Tuple,
            params: [
                App {
                    ctor: Int,
                    params: [],
                },
                App {
                    ctor: Bool,
                    params: [],
                },
            ],
        },
        3: App {
            ctor: Bool,
            params: [],
        },
        4: App {
            ctor: Int,
            params: [],
        },
        5: App {
            ctor: Tuple,
            params: [
                App {
                    ctor: Bool,
                    params: [],
                },
                App {
                    ctor: Int,
                    params: [],
                },
            ],
        },
        6: App {
            ctor: Tuple,
            params: [
                App {
                    ctor: Bool,
                    params: [],
                },
                App {
                    ctor: Int,
                    params: [],
                },
            ],
        },
    },
    type_of_type: {
        0: App {
            ctor: Tuple,
            params: [
                App {
                    ctor: Bool,
                    params: [],
                },
                App {
                    ctor: Int,
                    params: [],
                },
            ],
        },
    },
    type_of_pat: {
        0: App {
            ctor: Int,
            params: [],
        },
        1: App {
            ctor: Bool,
            params: [],
        },
        2: App {
            ctor: Tuple,
            params: [
                App {
                    ctor: Int,
                    params: [],
                },
                App {
                    ctor: Bool,
                    params: [],
                },
            ],
        },
    },
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App {
                ctor: Tuple,
                params: [
                    App {
                        ctor: Bool,
                        params: [],
                    },
                    App {
                        ctor: Int,
                        params: [],
                    },
                ],
            },
        },
    },
    diagnostics: [],
}
