crates/walrus-semantics/snapshots/infer/struct_field.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types
---
InferenceResult {
    type_of_expr: {
        0: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
        1: App(
            TypeApp {
                ctor: Bool,
                params: [],
            },
        ),
        2: App(
            TypeApp {
                ctor: Struct(
                    0,
                ),
                params: [],
            },
        ),
        3: App(
            TypeApp {
                ctor: Struct(
                    0,
                ),
                params: [],
            },
        ),
        4: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
        5: App(
            TypeApp {
                ctor: Struct(
                    0,
                ),
                params: [],
            },
        ),
        6: App(
            TypeApp {
                ctor: Bool,
                params: [],
            },
        ),
        7: App(
            TypeApp {
                ctor: Tuple,
                params: [
                    App(
                        TypeApp {
                            ctor: Int,
                            params: [],
                        },
                    ),
                    App(
                        TypeApp {
                            ctor: Bool,
                            params: [],
                        },
                    ),
                ],
            },
        ),
        8: App(
            TypeApp {
                ctor: Tuple,
                params: [
                    App(
                        TypeApp {
                            ctor: Int,
                            params: [],
                        },
                    ),
                    App(
                        TypeApp {
                            ctor: Bool,
                            params: [],
                        },
                    ),
                ],
            },
        ),
    },
    type_of_type: {
        0: App(
            TypeApp {
                ctor: Int,
                params: [],
            },
        ),
        1: App(
            TypeApp {
                ctor: Bool,
                params: [],
            },
        ),
        2: App(
            TypeApp {
                ctor: Tuple,
                params: [
                    App(
                        TypeApp {
                            ctor: Int,
                            params: [],
                        },
                    ),
                    App(
                        TypeApp {
                            ctor: Bool,
                            params: [],
                        },
                    ),
                ],
            },
        ),
    },
    type_of_pat: {
        0: App(
            TypeApp {
                ctor: Struct(
                    0,
                ),
                params: [],
            },
        ),
    },
    type_of_fn: {
        0: FnType {
            params: [],
            ret: App(
                TypeApp {
                    ctor: Tuple,
                    params: [
                        App(
                            TypeApp {
                                ctor: Int,
                                params: [],
                            },
                        ),
                        App(
                            TypeApp {
                                ctor: Bool,
                                params: [],
                            },
                        ),
                    ],
                },
            ),
        },
    },
    diagnostics: [],
}
