crates/walrus-semantics/snapshots/infer/tuple.snap
---
source: crates/walrus-semantics/src/ty.rs
expression: types

---
InferenceResult {
    type_of_expr: {
        0: Primitive(
            Int,
        ),
        1: Primitive(
            Bool,
        ),
        2: Tuple(
            [
                Primitive(
                    Int,
                ),
                Primitive(
                    Bool,
                ),
            ],
        ),
        3: Tuple(
            [
                Primitive(
                    Int,
                ),
                Primitive(
                    Bool,
                ),
            ],
        ),
    },
    type_of_type: {
        0: Tuple(
            [
                Primitive(
                    Int,
                ),
                Primitive(
                    Bool,
                ),
            ],
        ),
    },
    type_of_pat: {},
    type_of_fn: {
        0: FnType {
            params: [],
            ret: Tuple(
                [
                    Primitive(
                        Int,
                    ),
                    Primitive(
                        Bool,
                    ),
                ],
            ),
        },
    },
    diagnostics: [],
}
